src/contest/scss/layout.scss
.cm-container {
	overflow: hidden;
	position: relative;

	* {
		box-sizing: border-box;
	}

	p {
		margin-block-start: 0;
		margin-block-end: 0.75em;
		font-size: inherit;
		&:last-of-type {
			margin-block-end: 0;
		}
	}

	strong {
		font-weight: bold;
	}
	em {
		font-style: italic;
	}

	h1,
	h2,
	h3,
	h4,
	h5 {
		font-weight: bold;
		margin-block-start: 0;
		margin-block-end: 0.5em;
		padding: 0;
	}
	h1 {
		font-size: 2em;
	}
	h2 {
		font-size: 1.75em;
	}
	h3 {
		font-size: 1.5em;
	}
	h4 {
		font-size: 1.25em;
	}
	h6 {
		font-size: 1em;
	}

	img {
		display: inline-block;
		outline: 0;
		border: 0;
		max-width: 100%;
		object-fit: cover;
	}

	small {
		font-size: 90%;
	}
	.smaller {
		font-size: 80%;
	}

	.cm-row {
		overflow: hidden;
		position: relative;
		width: 100%;
		display: flex;
		flex-direction: row;
		gap: 0.75em;

		@media (max-width: 600px) {
			flex-direction: column;
		}
	}
	.cm-col {
		&.with_cube {
			min-width: 300px;
			max-width: 300px;
			@media (max-width: 600px) {
				max-width: auto;
			}
		}
	}

	.cm-twitter-desktop {
		display: none;
	}
	@media (min-width: 600px) {
		.cm-twitter-desktop {
			display: block;
		}
		.cm-twitter-mobile {
			display: none;
		}
	}

	.cm-facebook {
		width: 99%;
	}
}

.embed-container {
	position: relative;
	padding-bottom: 56.25%;
	height: 0;
	overflow: hidden;
	max-width: 100%;

	iframe,
	object,
	embed,
	video {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
	}
}
.embed-container-short {
	padding-bottom: 15%;
}

.cm-bit-header {
	background: #999;
	border-radius: 3px;
	color: #fff;
	font-size: 18px;
	line-height: 1;
	padding: 10px;
	text-align: center;
	text-transform: uppercase;
}
#bit-events table {
	border: 0;

	td,
	th {
		border: 0;
		border-bottom: 1px solid #444;
		color: #ddd;
		font-size: 95%;
		height: auto;
		padding: 0.55em 0.25em;
		width: auto;
	}

	@media (max-width: 600px) {
		tr:nth-child(n + 6) {
			display: none;
		}
	}
}
td.bit-rsvp {
	display: none;
}

